# concerto

./: .gitignore  BUILD.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  justfile
.github/workflows/: docker.yml  integration.yml  rust.yml  security.yml
concerto/: .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile.felaas  Dockerfile.guardianito  IMPLEMENTATION_STATUS.md  Makefile  README.md  docker-compose.yml  flake.nix
concerto/concerto-common/: Cargo.toml
concerto/concerto-common/src/: crypto.rs  economics.rs  error.rs  federation.rs  lib.rs  monitoring.rs  nostr_events.rs  slot.rs  subscription.rs
concerto/concerto-common/tests/: economics_tests.rs  federation_tests.rs  nostr_events_tests.rs  slot_tests.rs  subscription_tests.rs
concerto/concerto-felaas/: Cargo.toml
concerto/concerto-felaas/src/: api.rs  database.rs  deployment.rs  economics.rs  main.rs  provider.rs
concerto/concerto-guardianito/: Cargo.toml
concerto/concerto-guardianito/src/: activation.rs  commands.rs  config_exchange.rs  discovery.rs  dkg.rs  guardianito.rs  main.rs  nostr_client.rs  state.rs
concerto/concerto-integration-tests/: Cargo.toml  README.md  run-tests.sh
concerto/concerto-integration-tests/k8s-manifests/: nostr-relay.yaml  postgres.yaml
concerto/concerto-integration-tests/scripts/: setup-k3d.sh  teardown-k3d.sh
concerto/concerto-integration-tests/src/: common.rs  dkg_tests.rs  federation_tests.rs  main.rs  main_minimal.rs  nostr_tests.rs  simple_test.rs
concerto/kubernetes/: felaas-deployment.yaml  guardianito-statefulset.yaml  monitoring.yaml  namespace.yaml  postgres-statefulset.yaml  secrets-template.yaml
felaas-oss/: Cargo.toml
felaas-oss-integration-tests/: Cargo.toml
felaas-oss-integration-tests/k8s_manifests/: coredns-config.yaml  daemon-rbac.yaml  postgres.yaml
felaas-oss-integration-tests/src/: common.rs  k3d_test.rs  main.rs
felaas-oss/src/: amount.rs  api.rs  common.rs  federation_launcher_daemon.rs  fedimint_status_client.rs  guardian_launcher_tng.rs  lib.rs  main.rs  subscription_daemon.rs
felaas-oss/src/launch/: mod.rs
felaas-oss/src/launch/configuration/: api.rs  db.rs  mod.rs
felaas-oss/src/launch/subscription/: api.rs  db.rs  mod.rs
felaas-oss/src/og_registry/: api.rs  db.rs  error.rs  mod.rs
felaas-oss/src/wallet/: api.rs  core.rs
guardianito-oss/: Cargo.toml
guardianito-oss/src/: lib.rs  main.rs  nostr.rs
k8s-config/: kubeconfig.yaml
scripts/: k3d-config.yaml  k3d-setup.sh  run-integration-tests.sh
sql/migrations/: 001_initial.sql  002_subscriptions.sql  003_federations.sql
