[workspace]
members = [
    "concerto-common",
    "concerto-guardianito", 
    "concerto-felaas",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Concerto Contributors"]
license = "MIT"
repository = "https://github.com/your-org/concerto"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Nostr
nostr-sdk = "0.43.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Crypto
bitcoin = "0.32"
secp256k1 = "0.29"
sha2 = "0.10"
hex = "0.4"

# Fedimint  
fedimint-api-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.2" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.2" }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive", "env"] }
secrecy = "0.10"