[package]
name = "guardianito-oss"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "guardianito_oss"
path = "src/lib.rs"

[[bin]]
name = "guardianito-oss"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
nostr-sdk = { workspace = true }
postgres-from-row = { workspace = true }
postgres-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
