[package]
name = "concerto-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling  
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Crypto
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Nostr
nostr-sdk = { workspace = true }

# Logging
tracing = { workspace = true }