[package]
name = "concerto-felaas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "felaas"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
concerto-common = { path = "../concerto-common" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

# Nostr
nostr-sdk = { workspace = true }

# Crypto
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Container orchestration
bollard = "0.18"  # Docker API
k8s-openapi = { version = "0.23", features = ["v1_31"] }
kube = { version = "0.96", features = ["runtime", "derive", "client"] }