[package]
name = "concerto-integration-tests"
version = "0.1.0"
edition = "2021"
authors = ["Concerto Contributors"]
license = "MIT"

[[bin]]
name = "concerto-integration-tests"
path = "src/main.rs"

[dependencies]
# Internal dependencies
concerto-common = { path = "../concerto-common" }
concerto-guardianito = { path = "../concerto-guardianito" }
# concerto-felaas is binary-only, not used as dependency

# Core dependencies
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

# Kubernetes
k8s-openapi = { version = "0.23", features = ["latest"] }
kube = { version = "0.95", features = ["client", "runtime"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
secrecy = "0.10"

# Nostr
nostr-sdk = "0.43"

# Crypto
sha2 = "0.10"
hex = "0.4"

# HTTP client for testing endpoints
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }